--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,87 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% load static %}
 <!----xxxx---->
-{% block title %}
-pirates Venture Store
-{% endblock title %}
-{% block content %}
+{% block title %} pirates Venture Store {% endblock title %}
+<!--content-->
 
-<p>All the content will be printed here</p>
+{% block content %} {% for x,y in pro %}
+<div class="container mb-5 mt-5">
+  <h3 class="text-center">{{x}}</h3>
+  <hr class="w-50 mx-auto mb-5 mt-5" />
 
+  <div id="recentlyadded" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="card-group">
+          {% for i in y%}
+          <div class="card p-3">
+            <img
+              src="{{i.product_img.url}}"
+              class="card-img-top"
+              alt="product image"
+            />
+            <div class="card-body">
+              <h5 class="card-title">
+                {{i.product_name}}
+              </h5>
+              <p class="card-text">{{i.product_name}}</p>
+              <button id="product{{i.id}}" class="btn btn-dark cart">
+                Add to cart
+              </button>
+            </div>
+          </div>
+          {% if forloop.counter|divisibleby:4 and not forloop.last %}
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="card-group">{% endif %} {% endfor %}</div>
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#recentlyadded"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#recentlyadded"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon"></span>
+    </a>
+  </div>
+</div>
 
+{% endfor %} {% endblock content %} 
 
+{% block script %}
+<script>
+  
+  if (localStorage.getItem('cart') == null) {
+    var cart = {};
+  } else {
+    cart = JSON.parse(localStorage.getItem('cart'));
+    document.getElementById('cart').innerHTML=Object.keys(cart).length;
+  }
 
-{% endblock content %}
+  //jquery starts here//
+
+  $(".cart").click(function(){
+    var idstr = this.id.toString();
+    if (cart[idstr] != undefined){
+      cart[idstr] = cart[idstr] + 1;
+    } else {
+      cart[idstr] = 1;
+    }
+
+    console.log(cart);
+    localStorage.setItem("cart", JSON.stringify(cart));
+    document.getElementById('cart').innerHTML=Object.keys(cart).length;
+});
+
+</script>
+
+{% endblock script %}
