--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock title %}</title>
     {% block css %}{% endblock css %}
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
@@ -32,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">category1</a>
+              <a class="nav-link" href="#">cart(<span id="cart">0</span>)</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
