--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
           {% for i in y%}
           <div class="card p-3">
             <img
-              src="{{i.product_img.url}}"
+              src="{{i.product_img}}"
               class="card-img-top"
               alt="product image"
             />
