--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!--Navigation for piratesventure store-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">PVStore</a>
         <button
