--- a/templates/base.html
+++ b/templates/base.html
@@ -32,14 +32,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">cart(<span id="cart">0</span>)</a>
+             <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">contact</a>
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -52,14 +49,15 @@
             <button class="btn btn-outline-success" type="submit">
               Search
             </button>
-          </form>
+            <button class='btn btn-success mx-2' href='#'>Cart(<span id="cart">0</span>)</button>
+           </form>
         </div>
       </div>
     </nav>
     <!--navigation end-->
-    {% block content %}{% endblock content %} 
-    {% block script %}{% endblock script %}
-
+    {% block content %}{% endblock content %} {% block script %}
+    
+    {% endblock script %}
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   </body>
