--- a/templates/product.html
+++ b/templates/product.html
@@ -1,18 +1,40 @@
-{% extends 'base.html' %} {% load static %}
-<!----xxxx---->
-{% block title %} pirates Venture Store {% endblock title %}
-<!--content-->
+{% extends 'base.html' %} {% block title %}{{pro.product_name}} 
+{% endblock title %} 
+<!---xxxx--->
+{% block content %}
 
-{% block content %} {% for x,y in pro %}
+<div class="container mt-5" style="position: relative; top: 100px">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="row mb-5">
+        <img
+          src="{{pro.product_img}}"
+          alt=""
+          style="height: 300px; width: 233px"
+        />
+      </div>
+        <a href="#" class="btn btn-dark mx-3">Buy now</a>
+        <a href="#" class="btn btn-dark">Add to cart</a>
+    </div>
+
+      <div class="col-md-8">
+        <h1>{{pro.product_name}}</h1>
+        <h5>Rs. {{pro.price}}</h5>
+        <p>{{pro.desc|safe}}</p>
+    </div>
+  </div>
+</div>
+
+
 <div class="container mb-5 mt-5" style="position: relative; top: 100px">
-  <h3 class="text-center">{{x}}</h3>
+  <h3 class="text-center">Recommend Products</h3>
   <hr class="w-50 mx-auto mb-5 mt-5" />
 
   <div id="recentlyadded" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="card-group col">
-          {% for i in y%}
+          {% for i in recpro%}
           <div class="card p-3">
             <img
               src="{{i.product_img}}"
@@ -53,36 +75,5 @@
     </a>
   </div>
 
-  {% endfor %} {% endblock content %} {% block script %}
 
-  <script>
-    if (localStorage.getItem("cart") == null) {
-      var cart = {};
-    } else {
-      cart = JSON.parse(localStorage.getItem("cart"));
-    }
-
-    //jquery starts here//
-
-    $(".cart").click(function () {
-      var idstr = this.id;
-      if (cart[idstr] != undefined) {
-        cart[idstr] = cart[idstr] + 1;
-      } else {
-        cart[idstr] = 1;
-      }
-
-      localStorage.setItem("cart", JSON.stringify(cart));
-
-      var sum = 0;
-      for (item in cart) {
-        sum = sum + cart[item];
-      }
-      console.log(sum);
-      document.getElementById("cart").innerHTML = sum;
-    });
-
-  </script>
-
-  {% endblock script %}
-</div>
+  {% endblock content %}
