--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
               <button id="product{{i.id}}" class="btn btn-dark cart">
                 Add to cart
               </button>
-              <a href="/{{i.id}}" class="btn btn-outline-primary">View product</a>
+              <a href="/{{i.product_name}}" class="btn btn-outline-primary">View product
+              </a>
             </div>
           </div>
           {% if forloop.counter|divisibleby:4 and not forloop.last %}
